plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'backend.todo'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'         // REST, RestTemplate
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'    // JPA/Hibernate
    implementation 'org.postgresql:postgresql'                                // Postgres driver
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'   // Java 8 date/time
    implementation 'org.springframework.boot:spring-boot-starter'             // core + scheduling
    testImplementation  'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

